crates/craby_codegen/src/snapshots/craby_codegen__generator__tests__enum_types.snap
---
source: crates/craby_codegen/src/generator.rs
expression: result
---
pub trait MyModuleSpec {
    fn handle_value(enum_param: MyEnum);
}
