crates/craby_codegen/src/snapshots/craby_codegen__generator__tests__generate_ffi-2.snap
---
source: crates/craby_codegen/src/generator.rs
expression: result.impl_func
---
fn my_module_multiply(a: f64, b: String) -> f64 {
    MyModule::multiply(a, b)
}
