crates/craby_codegen/src/snapshots/craby_codegen__generator__tests__generate_ffi.snap
---
source: crates/craby_codegen/src/generator.rs
expression: result.extern_func
---
#[cxx_name = "multiply"]
fn my_module_multiply(a: f64, b: String) -> f64;
