crates/craby_codegen/src/snapshots/craby_codegen__generator__tests__generate_impl.snap
---
source: crates/craby_codegen/src/generator.rs
expression: result
---
use crate::{ffi::craby_test::*, generated::*};

pub struct CrabyTest;

impl CrabyTestSpec for CrabyTest {
    fn numeric_method(arg: f64) -> f64 {
        unimplemented!();
    }

    fn boolean_method(arg: bool) -> bool {
        unimplemented!();
    }

    fn string_method(arg: String) -> String {
        unimplemented!();
    }

    fn object_method(arg: TestObject) -> TestObject {
        unimplemented!();
    }

    fn array_method(arg: Vec<f64>) -> Vec<f64> {
        unimplemented!();
    }

    fn enum_method(arg: MyEnum) -> String {
        unimplemented!();
    }

    fn promise_method(arg: f64) -> Result<f64, anyhow::Error> {
        unimplemented!();
    }
}
