crates/craby_codegen/src/snapshots/craby_codegen__generator__tests__generate_rs_cxx_bridges-2.snap
---
source: crates/craby_codegen/src/generator.rs
expression: result.impl_func
---
fn craby_test_numeric_method(arg: f64) -> f64 {
    CrabyTest::numeric_method(arg)
}

fn craby_test_boolean_method(arg: bool) -> bool {
    CrabyTest::boolean_method(arg)
}

fn craby_test_string_method(arg: String) -> String {
    CrabyTest::string_method(arg)
}

fn craby_test_object_method(arg: TestObject) -> TestObject {
    CrabyTest::object_method(arg)
}

fn craby_test_array_method(arg: Vec<f64>) -> Vec<f64> {
    CrabyTest::array_method(arg)
}

fn craby_test_enum_method(arg: MyEnum) -> String {
    CrabyTest::enum_method(arg)
}

fn craby_test_promise_method(arg: f64) -> Result<f64, anyhow::Error> {
    CrabyTest::promise_method(arg)
}
