crates/craby_codegen/src/snapshots/craby_codegen__generator__tests__generate_rs_cxx_bridges.snap
---
source: crates/craby_codegen/src/generator.rs
expression: result.extern_func
---
#[cxx_name = "numericMethod"]
fn craby_test_numeric_method(arg: f64) -> f64;

#[cxx_name = "booleanMethod"]
fn craby_test_boolean_method(arg: bool) -> bool;

#[cxx_name = "stringMethod"]
fn craby_test_string_method(arg: String) -> String;

#[cxx_name = "objectMethod"]
fn craby_test_object_method(arg: TestObject) -> TestObject;

#[cxx_name = "arrayMethod"]
fn craby_test_array_method(arg: Vec<f64>) -> Vec<f64>;

#[cxx_name = "enumMethod"]
fn craby_test_enum_method(arg: MyEnum) -> String;

#[cxx_name = "promiseMethod"]
fn craby_test_promise_method(arg: f64) -> Result<f64>;
