crates/craby_codegen/src/snapshots/craby_codegen__generator__tests__generate_spec.snap
---
source: crates/craby_codegen/src/generator.rs
expression: result
---
pub trait CrabyTestSpec {
    fn numeric_method(arg: f64) -> f64;
    fn boolean_method(arg: bool) -> bool;
    fn string_method(arg: String) -> String;
    fn object_method(arg: TestObject) -> TestObject;
    fn array_method(arg: Vec<f64>) -> Vec<f64>;
    fn enum_method(arg: MyEnum) -> String;
    fn promise_method(arg: f64) -> Result<f64, anyhow::Error>;
}
