crates/craby_codegen/src/snapshots/craby_codegen__generator__tests__get_cxx_bridging_templates.snap
---
source: crates/craby_codegen/src/generator.rs
expression: "result.join(\"\\n\")"
---
template <>
struct Bridging<craby::crabytest::SubObject> {
  static craby::crabytest::SubObject fromJs(jsi::Runtime &rt, const jsi::Value& value, std::shared_ptr<CallInvoker> callInvoker) {
    auto obj = value.asObject(rt);
    auto obj$a = obj.getProperty(rt, "a");
    auto obj$b = obj.getProperty(rt, "b");
    auto obj$c = obj.getProperty(rt, "c");

    auto _obj$a = react::bridging::fromJs<std::string>(rt, obj$a, callInvoker);
    auto _obj$b = react::bridging::fromJs<double>(rt, obj$b, callInvoker);
    auto _obj$c = react::bridging::fromJs<bool>(rt, obj$c, callInvoker);

    craby::crabytest::SubObject ret = {
      _obj$a,
      _obj$b,
      _obj$c
    };

    return ret;
  }

  static jsi::Value toJs(jsi::Runtime &rt, craby::crabytest::SubObject value) {
    jsi::Object obj = jsi::Object(rt);
    auto _obj$a = react::bridging::toJs(rt, std::string(value.a));
    auto _obj$b = react::bridging::toJs(rt, value.b);
    auto _obj$c = react::bridging::toJs(rt, value.c);

    obj.setProperty(rt, "a", _obj$a);
    obj.setProperty(rt, "b", _obj$b);
    obj.setProperty(rt, "c", _obj$c);

    return jsi::Value(rt, obj);
  }
};
template <>
struct Bridging<craby::crabytest::TestObject> {
  static craby::crabytest::TestObject fromJs(jsi::Runtime &rt, const jsi::Value& value, std::shared_ptr<CallInvoker> callInvoker) {
    auto obj = value.asObject(rt);
    auto obj$foo = obj.getProperty(rt, "foo");
    auto obj$bar = obj.getProperty(rt, "bar");
    auto obj$baz = obj.getProperty(rt, "baz");
    auto obj$sub = obj.getProperty(rt, "sub");

    auto _obj$foo = react::bridging::fromJs<std::string>(rt, obj$foo, callInvoker);
    auto _obj$bar = react::bridging::fromJs<double>(rt, obj$bar, callInvoker);
    auto _obj$baz = react::bridging::fromJs<bool>(rt, obj$baz, callInvoker);
    auto _obj$sub = react::bridging::fromJs<craby::crabytest::SubObject>(rt, obj$sub, callInvoker);

    craby::crabytest::TestObject ret = {
      _obj$foo,
      _obj$bar,
      _obj$baz,
      _obj$sub
    };

    return ret;
  }

  static jsi::Value toJs(jsi::Runtime &rt, craby::crabytest::TestObject value) {
    jsi::Object obj = jsi::Object(rt);
    auto _obj$foo = react::bridging::toJs(rt, std::string(value.foo));
    auto _obj$bar = react::bridging::toJs(rt, value.bar);
    auto _obj$baz = react::bridging::toJs(rt, value.baz);
    auto _obj$sub = react::bridging::toJs(rt, value.sub);

    obj.setProperty(rt, "foo", _obj$foo);
    obj.setProperty(rt, "bar", _obj$bar);
    obj.setProperty(rt, "baz", _obj$baz);
    obj.setProperty(rt, "sub", _obj$sub);

    return jsi::Value(rt, obj);
  }
};
template <>
struct Bridging<craby::crabytest::MyEnum> {
  static craby::crabytest::MyEnum fromJs(jsi::Runtime &rt, const jsi::Value& value, std::shared_ptr<CallInvoker> callInvoker) {
    auto raw = value.asString(rt).utf8(rt);
    if (raw == "FOO") {
      return craby::crabytest::MyEnum::FOO;
    } else if (raw == "BAR") {
      return craby::crabytest::MyEnum::BAR;
    } else if (raw == "BAZ") {
      return craby::crabytest::MyEnum::BAZ;
    } else {
      throw jsi::JSError(rt, "Invalid enum value (MyEnum)");
    }
  }

  static jsi::Value toJs(jsi::Runtime &rt, craby::crabytest::MyEnum value) {
    switch (value) {
      case craby::crabytest::MyEnum::FOO:
        return react::bridging::toJs(rt, "FOO");
      case craby::crabytest::MyEnum::BAR:
        return react::bridging::toJs(rt, "BAR");
      case craby::crabytest::MyEnum::BAZ:
        return react::bridging::toJs(rt, "BAZ");
      default:
        throw jsi::JSError(rt, "Invalid enum value (MyEnum)");
    }
  }
};
