crates/craby_codegen/src/snapshots/craby_codegen__generator__tests__get_cxx_methods.snap
---
source: crates/craby_codegen/src/generator.rs
expression: "methods.join(\"\\n\")"
---
numericMethod
jsi::Value CxxCrabyTestModule::numericMethod(jsi::Runtime &rt,
                                react::TurboModule &turboModule,
                                const jsi::Value args[],
                                size_t count) {
  auto &thisModule = static_cast<CxxCrabyTestModule &>(turboModule);
  auto callInvoker = thisModule.callInvoker_;

  try {
    if (1 != count) {
      throw jsi::JSError(rt, "Expected 1 argument");
    }

    auto arg0 = react::bridging::fromJs<double>(rt, args[0], callInvoker);
    auto ret = craby::crabytest::numericMethod(arg0);

    return react::bridging::toJs(rt, ret);
  } catch (const jsi::JSError &err) {
    throw err;
  } catch (const std::exception &err) {
    throw jsi::JSError(rt, errorMessage(err));
  }
}
MethodMetadata{1, &CxxCrabyTestModule::numericMethod}
booleanMethod
jsi::Value CxxCrabyTestModule::booleanMethod(jsi::Runtime &rt,
                                react::TurboModule &turboModule,
                                const jsi::Value args[],
                                size_t count) {
  auto &thisModule = static_cast<CxxCrabyTestModule &>(turboModule);
  auto callInvoker = thisModule.callInvoker_;

  try {
    if (1 != count) {
      throw jsi::JSError(rt, "Expected 1 argument");
    }

    auto arg0 = react::bridging::fromJs<bool>(rt, args[0], callInvoker);
    auto ret = craby::crabytest::booleanMethod(arg0);

    return react::bridging::toJs(rt, ret);
  } catch (const jsi::JSError &err) {
    throw err;
  } catch (const std::exception &err) {
    throw jsi::JSError(rt, errorMessage(err));
  }
}
MethodMetadata{1, &CxxCrabyTestModule::booleanMethod}
stringMethod
jsi::Value CxxCrabyTestModule::stringMethod(jsi::Runtime &rt,
                                react::TurboModule &turboModule,
                                const jsi::Value args[],
                                size_t count) {
  auto &thisModule = static_cast<CxxCrabyTestModule &>(turboModule);
  auto callInvoker = thisModule.callInvoker_;

  try {
    if (1 != count) {
      throw jsi::JSError(rt, "Expected 1 argument");
    }

    auto arg0 = react::bridging::fromJs<std::string>(rt, args[0], callInvoker);
    auto ret = craby::crabytest::stringMethod(arg0);

    return react::bridging::toJs(rt, std::string(ret));
  } catch (const jsi::JSError &err) {
    throw err;
  } catch (const std::exception &err) {
    throw jsi::JSError(rt, errorMessage(err));
  }
}
MethodMetadata{1, &CxxCrabyTestModule::stringMethod}
objectMethod
jsi::Value CxxCrabyTestModule::objectMethod(jsi::Runtime &rt,
                                react::TurboModule &turboModule,
                                const jsi::Value args[],
                                size_t count) {
  auto &thisModule = static_cast<CxxCrabyTestModule &>(turboModule);
  auto callInvoker = thisModule.callInvoker_;

  try {
    if (1 != count) {
      throw jsi::JSError(rt, "Expected 1 argument");
    }

    auto arg0 = react::bridging::fromJs<craby::crabytest::TestObject>(rt, args[0], callInvoker);
    auto ret = craby::crabytest::objectMethod(arg0);

    return react::bridging::toJs(rt, ret);
  } catch (const jsi::JSError &err) {
    throw err;
  } catch (const std::exception &err) {
    throw jsi::JSError(rt, errorMessage(err));
  }
}
MethodMetadata{1, &CxxCrabyTestModule::objectMethod}
arrayMethod
jsi::Value CxxCrabyTestModule::arrayMethod(jsi::Runtime &rt,
                                react::TurboModule &turboModule,
                                const jsi::Value args[],
                                size_t count) {
  auto &thisModule = static_cast<CxxCrabyTestModule &>(turboModule);
  auto callInvoker = thisModule.callInvoker_;

  try {
    if (1 != count) {
      throw jsi::JSError(rt, "Expected 1 argument");
    }

    auto arg0 = react::bridging::fromJs<rust::Vec<double>>(rt, args[0], callInvoker);
    auto ret = craby::crabytest::arrayMethod(arg0);

    return react::bridging::toJs(rt, ret);
  } catch (const jsi::JSError &err) {
    throw err;
  } catch (const std::exception &err) {
    throw jsi::JSError(rt, errorMessage(err));
  }
}
MethodMetadata{1, &CxxCrabyTestModule::arrayMethod}
enumMethod
jsi::Value CxxCrabyTestModule::enumMethod(jsi::Runtime &rt,
                                react::TurboModule &turboModule,
                                const jsi::Value args[],
                                size_t count) {
  auto &thisModule = static_cast<CxxCrabyTestModule &>(turboModule);
  auto callInvoker = thisModule.callInvoker_;

  try {
    if (1 != count) {
      throw jsi::JSError(rt, "Expected 1 argument");
    }

    auto arg0 = react::bridging::fromJs<craby::crabytest::MyEnum>(rt, args[0], callInvoker);
    auto ret = craby::crabytest::enumMethod(arg0);

    return react::bridging::toJs(rt, std::string(ret));
  } catch (const jsi::JSError &err) {
    throw err;
  } catch (const std::exception &err) {
    throw jsi::JSError(rt, errorMessage(err));
  }
}
MethodMetadata{1, &CxxCrabyTestModule::enumMethod}
promiseMethod
jsi::Value CxxCrabyTestModule::promiseMethod(jsi::Runtime &rt,
                                react::TurboModule &turboModule,
                                const jsi::Value args[],
                                size_t count) {
  auto &thisModule = static_cast<CxxCrabyTestModule &>(turboModule);
  auto callInvoker = thisModule.callInvoker_;

  try {
    if (1 != count) {
      throw jsi::JSError(rt, "Expected 1 argument");
    }

    auto arg0 = react::bridging::fromJs<double>(rt, args[0], callInvoker);
    react::AsyncPromise<double> promise(rt, callInvoker);

    std::thread([promise, arg0]() mutable {
      try {
        auto ret = craby::crabytest::promiseMethod(arg0);
        promise.resolve(ret);
      } catch (const jsi::JSError &err) {
        promise.reject(err.getMessage());
      } catch (const std::exception &err) {
        promise.reject(errorMessage(err));
      }
    }).detach();

    return react::bridging::toJs(rt, promise);
  } catch (const jsi::JSError &err) {
    throw err;
  } catch (const std::exception &err) {
    throw jsi::JSError(rt, errorMessage(err));
  }
}
MethodMetadata{1, &CxxCrabyTestModule::promiseMethod}
