crates/craby_codegen/src/snapshots/craby_codegen__generator__tests__spec_generation.snap
---
source: crates/craby_codegen/src/generator.rs
expression: result
---
pub trait MyModuleSpec {
    fn multiply(a: f64, b: f64) -> f64;
}
