crates/craby_codegen/src/snapshots/craby_codegen__generator__tests__void_function_generation.snap
---
source: crates/craby_codegen/src/generator.rs
expression: result
---
pub trait MyModuleSpec {
    fn log_message(message: String);
}
